--- a/src/Pages/Products/Product.css
+++ b/src/Pages/Products/Product.css
@@ -1,11 +1,20 @@
-
-.elect{
-    display: flex;
- flex-wrap: wrap;
-    padding: 10px 10px 20px 0px;
-   
+.elect {
+  /* display: flex;
+  flex-wrap: wrap;
+  gap: 1em; */
+  padding: 1em;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(150px, 1fr));
+  gap: 1em;
 }
-p{text-align: center;}
-.Elect-image:hover{
+p {
+  text-align: center;
+}
+/* .Elect-image:hover {
+} */
 
+.elect-box {
+  border-radius: 8px;
+  overflow: hidden;
+  background: rgba(240, 240, 240, 0.8);
 }
