--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,27 @@
 .App {
   text-align: center;
-}
-body{
   width: 100%;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
+}
+body {
+  width: 100%;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+}
+.mainPanel {
+  flex-grow: 1;
   height: 100%;
+  overflow: scroll;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -39,4 +49,4 @@ body{
   to {
     transform: rotate(360deg);
   }
-}
+} */
