--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,25 +1,63 @@
-.page{
-    margin-left: 10px;
+.page {
+  height: 100%;
+  width: 100%;
+  padding: 2em 4em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1em;
 }
-.homepage{
-    width: 100%;
+.homepage {
+  flex-grow: 1;
+  /* width: 100%; */
+  height: 100%;
+  display: flex;
 }
-.H{
-    color: rgba(37, 64, 216, 0.932);
-    font-size: 30px;
-    text-align: left;
-   font-family:'Times New Roman', Times, serif;
-   padding-left: 10px;
+.H {
+  color: rgba(37, 64, 216, 0.932);
+  font-size: 1.4em;
+  font-weight: 600;
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  padding-left: 10px;
 }
-h2{
-    color: rgba(27, 107, 199, 0.705);
+
+.images {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  gap: 2.5em;
 }
-.images{
-    display: grid;
-    grid-template-columns: auto auto;
+
+/* .img-1,
+.img-2,
+.img-3,
+.img-4 {
+  width: 90%;
+  height: 85%;
+  object-fit: fill;
+} */
+
+.imgWrapper {
+  display: flex;
+  flex-direction: column-reverse;
+  box-shadow: 0px 2px 4px rgba(27, 107, 199, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  height: 280px;
+  position: relative;
 }
-.img-1, .img-2, .img-3, .img-4{
-    width: 90%;
-    height: 85%;
- object-fit:fill;
+
+.imgWrapper img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.imgWrapper h2 {
+  padding: 2em 1em 1em 1em;
+  font-family: "Poppins", sans-serif;
+  color: rgba(255, 255, 255, 1);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  z-index: 2;
 }
