--- a/src/Pages/Log in/Login.css
+++ b/src/Pages/Log in/Login.css
@@ -1,77 +1,87 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
-.bdy{
-    display: flex;
-    justify-content: center;
-    background-color: #f9fafb;
-    min-height: 100vh;
-    font-family: "Open Sans", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.bdy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9fafb;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
-} 
-.formBox{
-    background-color: #fff;
-    border-radius: 8px;
-    width: 320px;
-    height: 350px;
-    margin-top: 8%;
-    text-align: center;
-    padding-inline: 3%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  font-family: "Poppins", sans-serif;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  min-height: 100vh;
 }
-.formBox h1{
-font-size: 28px;
-margin-top: 10%;
-color: black;
+.formBox {
+  background-color: #fff;
+  border-radius: 10px;
+  width: 320px;
+  text-align: center;
+  padding: 2em;
+  box-shadow: 1px 2px 4px rgba(60, 112, 207, 0.25);
 }
-.formBox p{
-font-size: 20px;
-margin-top: 3%;
-
+.formBox h1 {
+  font-size: 28px;
+  color: rgba(0, 0, 0, 0.75);
 }
-.loginForm{
-    display: flex;
-    flex-direction: column;
-    margin-top: 8%;
-    text-align: start;
+.formBox p {
+  font-size: 0.9em;
+  color: rgba(0, 0, 0, 0.5);
 }
-.formField{
-background-color: transparent;
-border: none;
-outline: none;
-margin-top: 4%;
-font-size: 18px;
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: 8%;
+  text-align: start;
+  width: 100%;
 }
-hr{
-    margin-top: 3%;
+.formField {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  margin-top: 4%;
+  width: 100%;
+  padding: 1em 2em;
+  font-size: 0.9em;
+  color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 0px rgba(60, 112, 207, 0.25);
+  border-radius: 10px;
 }
-#submitButton{
-    width: 300px;
-    height: 35px;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 7px;
-    background-color: rgb(103, 145, 223);
-    color: #fff;
+hr {
+  margin-top: 3%;
 }
-.submit{
-    text-align: center;
-    margin-top: 10%;
+#submitButton {
+  width: 100%;
+  padding: 0.5em 1em;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 7px;
+  background-color: rgb(103, 145, 223);
+  color: #fff;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
 }
-#submitButton:hover{
-    background-color: rgb(60, 112, 207);
+.submit {
+  text-align: center;
+  margin-top: 10%;
+}
+#submitButton:hover {
+  background-color: rgb(60, 112, 207);
 }
 
 @media (max-width: 430px) {
-    .formBox{
-        width: 300px;
-    }
-    #submitButton{
-        width: 270px;
-    }
+  .formBox {
+    width: 300px;
+  }
+  #submitButton {
+    width: 270px;
+  }
 }
