--- a/src/Pages/Team/team.css
+++ b/src/Pages/Team/team.css
@@ -1,3 +1,66 @@
- th, td{
-    border-bottom: 1px solid #1363db;
+.teamPage {
+  width: 100%;
+  height: 100%;
+  padding: 2em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+
+.teamMember {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 320px;
+  height: 300px;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+
+.teamMember:hover {
+  transform: scale(1.05);
+}
+
+.teamMember__details {
+  z-index: 2;
+  display: flex;
+  gap: 0.25em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em 1em 1em 1em;
+  color: white;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+}
+
+.teamMember__details div {
+  display: flex;
+  gap: 1em;
+  align-items: center;
+  font-size: 0.8em;
+}
+
+.teamMember__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.teamMember__image img {
+  /* width: 100%; */
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  margin-left: -40%;
+}
+
+.teamMember__name {
+  font-size: 1.2em !important;
+  font-weight: 600;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
 }
